fix mobile new user page overflow

--- a/app/assets/stylesheets/core/_base.scss
+++ b/app/assets/stylesheets/core/_base.scss
@@ -1,3 +1,7 @@
+html, body{
+	height:100%;
+}
+
 a, a:visited {
 	color: $secondary-color;
 	text-decoration: none;
